kubernetes/apps/dashboards/glance/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: glance
  namespace: glance
  labels:
    app: glance
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: glance
